syntax = "proto3";

package greet;
option go_package="./greet/greetpb";

message Greeting{
    string first_name=1;
    string last_name = 2;

}

message GreetRequest{
    Greeting greeting=1;

}

message GreetResponse{
    string result=1;
}

message GreetManyTimesRequest{
    Greeting greeting=1;

}

message GreetManyTimesResponse{
    string result=1;
}

message LongGreetRequest{
    Greeting greeting =1;

}

message LongGreetResponse{
    string result =1;
}

message GreetEveroneRequest{
    Greeting greeting =1;

}

message GreetEveroneResponse{
    string result =1;
}

service GreetService{
    //Unary api
    //takes input GreetRequest and outputs GreetResponse
    //keep the rpc format "Something(SomethingRequest) returns (SomethingResponse)"
    rpc Greet(GreetRequest) returns(GreetResponse){}; 

    // Server Streaming RPC
    rpc GreetManyTimes(GreetManyTimesRequest) returns(stream GreetManyTimesResponse){};

    // Client streaming RPC 
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){};

    // bidirectional streaming RPC
    rpc GreetEveryone(stream GreetEveroneRequest) returns (stream GreetEveroneResponse){};

}